альфа альфа-версии
=) дубль 2

--- a/index.html
+++ b/index.html
@@ -7,12 +7,46 @@
 </head>
 
 <body>
-<div class="wrap">
-  <div class="contentdiv">
-Этот блок фиксированного или относительного размера всегда будет горизонтально отцентрован <br /><br />
-А еще он растянут на всю высоту экрана
-  </div>
-</div>
+	<div id="header">
+		<a href="#"><h1 id="logo">mmcrm</h1></a>
+		<form id="qtask">
+			<input id="qtask-field" type="text" value="Быстрое добавление задачи" onblur="this.value=(this.value=='')?this.title:this.value;" onfocus="this.value=(this.value==this.title)?'':this.value;" value="Быстрое добавление задачи" title="Быстрое добавление задачи" />
+		</form>
+	</div>
+	
+	<div class="h">
+	<div id="block1" class="h">	
+		<ul id="main-list">
+			<li><a href="#">Главная</a></li>
+			<li><a href="#">Проекты</a></li>
+			<li><a href="#">Сообщения</a></li>
+			<li><a href="#">Заметки</a></li>
+			<li><a href="#">Файлы</a></li>
+			<li><a href="#">Статистика</a></li>
+			<li><a href="#">Контакты</a></li>			
+		</ul>
+	</div>
+	
+	<div id="block2" class="h">
+		<div id="project-1" class="project-info">
+			<div class="block-title">Интернет-магазин</div>
+			<div class="project-about">
+				Если помните, я спрашивала, не нужно ли уменьшить размеры циферблатов рядом со списком стран в левом сайдбаре. Я поставила размер совершенно произвольно,  в расчете на то, что вы откорректируете его или может вообще забракуете. Получилось неплохо, но, как мне кажется, часики великоваты.  Вы специально оставили такой размер или просто не стали менять?
+			</div>
+		</div>
+		
+		<div class="block-title">
+			Задачи проекта (4)
+		</div>
+		<div class="block-title">
+			Задачи проекта (4)
+		</div>
+	</div>
+	
+	<div id="block3" class="h">
+		Освобождение, следовательно, раскладывает на элементы естественный структурализм, изменяя привычную реальность. Жизнь выводит естественный принцип восприятия, хотя в официозе принято обратное. Созерцание порождает и обеспечивает субъективный бабувизм, tertium nоn datur. Искусство реально дискредитирует данный гений, отрицая очевидное.
+	</div>
+	</div>
 	
 </body>
 </html>
