--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 				  </div>
 				  <div class="control-group">					
 					<input type="password" id="password" placeholder="Пароль"><br/>
-					<a id="forg-pwd" class="pull-right" href="project.html"><small>Забыли пароль?</small></a>
+					<a id="forg-pwd" class="pull-right" href="blank.html"><small>Забыли пароль?</small></a>
 				  </div>
-				
+	<button id="submit" class="btn btn-primary btn-block btn-large">Войти</button>			
 </form>
-	<a id="submit" href="project.html" class="btn btn-primary btn-large">Войти</a>
+	
   </div>
   <div class="modal-footer">
    <center><small class="muted">©2012 mediamara.by</small></center>
