--- a/project.html
+++ b/project.html
@@ -14,9 +14,9 @@
 		<div class="span12">
 			<div class="row-fluid">
 				<ul class="nav nav-tabs grey-bg">
-					<li><a class="btn btn-primary" href="index.html"><i class="icon-fire icon-white"></i></a></li>
+					<li><a class="btn btn-primary" href="blank.html"><i class="icon-fire icon-white"></i></a></li>
 					<li class="active dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="add-on"><i class="icon-briefcase"></i></span> Проекты <span class="badge badge-info">17</span> <b class="caret"></b></a>
+						<a class="dropdown-toggle" data-toggle="dropdown" href="project.html"><span class="add-on"><i class="icon-briefcase"></i></span> Проекты <span class="badge badge-info">17</span> <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">Автозапчасти<span class="badge badge-info pull-right">8</span></a></li>
 								<li><a href="#">Пятиборье сайт<span class="badge badge-info pull-right">5</span></a></li>
