--- a/-archive/v2/index.html
+++ b/-archive/v2/index.html
@@ -23,7 +23,7 @@
 				  </div>
 				  <div class="control-group">					
 					<input type="password" id="password" placeholder="Пароль"><br/>
-					<a id="forg-pwd" class="pull-right" href="blank.html"><small>Забыли пароль?</small></a>
+					<a id="forg-pwd" class="pull-right" href="main.html"><small>Забыли пароль?</small></a>
 				  </div>
 	<button id="submit" class="btn btn-primary btn-block btn-large">Войти</button>			
 </form>
